fixed text align back to left on desktop size

--- a/src/components/updates-item/updates-item.styles.scss
+++ b/src/components/updates-item/updates-item.styles.scss
@@ -71,7 +71,7 @@
 			text-overflow: ellipsis;
 			position: relative;
 			overflow: hidden;
-			text-align: center;
+			text-align: left;
 			margin-right: -1.4em;
 			padding-right: 1.4em;
 
@@ -97,6 +97,7 @@
 				font-size: 16px;
 				line-height: 30px;
 				max-height: 90px;
+				text-align: center;
 			}
 		}
 
